// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coutdown should show a minutes 1`] = `
"
    <div
    data-testid=\\"minute\\"
  >
    <span>
      0
    </span>
    <span>
      1
    </span>
  </div>
    "
`;

exports[`Coutdown should show a seconds 1`] = `
"
    <div
    data-testid=\\"second\\"
  >
    <span>
      0
    </span>
    <span>
      5
    </span>
  </div>
    "
`;
